(chores) camel-core: tests cleanups
- remove unnecessary override
- simplify list creation
- use try-with-resources